[tool.poetry]
name = "careerhigh_quant"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
jupyterlab = "^3.2.8"
numpy = "^1.22.1"
pyfolio = "^0.9.2"
QuantStats = "^0.0.48"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
